# Webchat

./: .gitignore  README.md
.github/workflows/: test.yml
backend/auth-service/: Cargo.toml  Dockerfile
backend/auth-service/src/: auth.rs  db.rs  handlers.rs  main.rs
backend/auth-service/src/tests/: mod.rs
backend/core-service/: Cargo.toml  Dockerfile
backend/core-service/src/: auth.rs  db.rs  main.rs  websocket.rs
backend/core-service/src/routes/: channels.rs  messages.rs  servers.rs
backend/core-service/src/tests/: mod.rs
frontend/web/: next.config.js  package-lock.json  package.json
frontend/web/src/app/: globals.css  layout.tsx
