[package]
name = "core-service"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = { version = "0.7", features = ["ws"] }
mongodb = "2.8"
redis = { version = "0.24", features = ["tokio-comp"] }
jsonwebtoken = "9"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
futures-util = "0.3"
dotenv = "0.15"
tower-http = { version = "0.6", features = ["cors", "trace", "limit"] }
tower = { version = "0.4", features = ["limit", "timeout"] }
chrono = { version = "0.4", features = ["serde"] }
nanoid = "0.4"
validator = { version = "0.16", features = ["derive"] }
axum-extra = { version = "0.9", features = ["typed-header"] }
headers = "0.4"
